# excel

./: .gitattributes  .gitignore  COMPLETE_SETUP_GUIDE.md  Dockerfile  GLM_INTEGRATION_COMPLETE.md  README.md  USAGE_GUIDE.md  WEB_INTERFACE_GUIDE.md  demo.py  pyproject.toml  requirements.txt  test_glm_end_to_end.py  test_glm_model.py  test_glm_simple.py  test_integration.py  test_output.xlsx  test_setup.py
demo/ExcelAssistant/: .gitignore  README.md  index.html  package-lock.json  package.json  server.py
demo/ExcelAssistant/src/: App.css  App.jsx  ChatSidebar.css  ChatSidebar.jsx  index.css
demo/SlackExcelWorkflow/: README.md  excel_agent_bot.py
evals/: README.md  comparison.py  run_eval.py
evals/data/: dataset.json
evals/data/sb_verified/12864/: 1_12864_answer.xlsx  1_12864_input.xlsx  2_12864_answer.xlsx  2_12864_input.xlsx  3_12864_answer.xlsx  3_12864_input.xlsx
evals/data/sb_verified/13-1/: 1_13-1_answer.xlsx  1_13-1_input.xlsx  2_13-1_answer.xlsx  2_13-1_input.xlsx  3_13-1_answer.xlsx  3_13-1_input.xlsx
evals/data/sb_verified/13284/: 1_13284_answer.xlsx  1_13284_input.xlsx  2_13284_answer.xlsx  2_13284_input.xlsx  3_13284_answer.xlsx  3_13284_input.xlsx
evals/data/sb_verified/13894/: 1_13894_answer.xlsx  1_13894_input.xlsx  2_13894_answer.xlsx  2_13894_input.xlsx  3_13894_answer.xlsx  3_13894_input.xlsx
evals/data/sb_verified/14207/: 1_14207_answer.xlsx  1_14207_input.xlsx  2_14207_answer.xlsx  2_14207_input.xlsx  3_14207_answer.xlsx  (+1 more)
excel_agent/: custom_models.py  reasoning_models.py
excel_env/: pyvenv.cfg
excel_mcp/: excel_server.py
(+270 files in other folders)
