[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-agent"
version = "0.1.0"
description = "Excel Agent with MCP server"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["excel_agent*", "excel_mcp*"]
